# Biblioteca-api

./: .coverage  .env  Dockerfile  celery_app.py  deployment.yaml  docker-compose.yml  kafka_producer.py  livros.db  main.py  pyproject.toml  script.sh  service.yaml  tasks.py  test.db  test_livros.db
__pycache__/: index.html
tests/: test_autenticacao_endpoint.py  test_database.py  test_hello_world.py  test_soma.py  test_task_endpoint.py  test_tasks_celery.py
