[project]
name = "fast"
version = "0.1.0"
description = ""
authors = [
    {name = "Bno", email = "Breno_live2005@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]
